mdapipkg/objects/CA_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CA Settings</relationshipLabel>
        <relationshipName>CA_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact lookup for CMO and CC who might not have a user license</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CA Settings</relationshipLabel>
        <relationshipName>CA_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>IF(
 ISPICKVAL(Role__c, &apos;Chapter Administrator&apos;),
 User__r.Email ,
Contact__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter Administrator</fullName>
                </value>
                <value>
                    <fullName>Chapter Membership Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Chair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CA_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>CA Setting</label>
    <listViews>
        <fullName>CC_Settings_View</fullName>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Chapter__c</columns>
        <columns>Role__c</columns>
        <columns>isActive__c</columns>
        <columns>Primary__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Chapter Chair</value>
        </filters>
        <label>CA Settings - CC</label>
    </listViews>
    <listViews>
        <fullName>CMO_Settings_View</fullName>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Chapter__c</columns>
        <columns>Role__c</columns>
        <columns>isActive__c</columns>
        <columns>Primary__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Chapter Membership Officer</value>
        </filters>
        <label>CA Settings - CMO</label>
    </listViews>
    <listViews>
        <fullName>Settings_View</fullName>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Chapter__c</columns>
        <columns>Role__c</columns>
        <columns>isActive__c</columns>
        <columns>Primary__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Chapter Administrator</value>
        </filters>
        <label>CA Settings - CA</label>
    </listViews>
    <nameField>
        <label>CA Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Primary_cannot_be_True_if_IsActive_false</fullName>
        <active>true</active>
        <description>Validation Rule on CA_Setting__c so that Primary__c cannot be True if the isActive__c flag is marked as false.</description>
        <errorConditionFormula>And (Primary__c = true, isActive__c = false)</errorConditionFormula>
        <errorMessage>Primary Checkbox cannot be &apos;True&apos;  if IsActive Checkbox is &apos;False&apos;</errorMessage>
    </validationRules>
</CustomObject>